--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,11 @@ max-line-length = 88
 select = C,E,F,W,B,B950
 extend-ignore = E203, E501
 
+[isort]
+profile=black
+known_third_party=numpy,pytest
+known_first_party=connect6
+
 [testenv]
 description = run unit tests
 deps =
@@ -24,9 +29,11 @@ skip_install = true
 deps =
     black==22.12
     flake8>=6.0
+    isort>=5.10
 commands =
     flake8 {posargs:connect6}
     black {posargs:.}
+    isort {posargs:connect6}
 
 [testenv:type]
 description = run type checks
