--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,6 @@
 [mypy]
 plugins = numpy.typing.mypy_plugin
+show_column_numbers = true
+show_error_codes = true
+show_error_context = true
+warn_unreachable = true
