--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,8 @@ env_list = lint, type, py{38,39,310,311}
 
 [flake8]
 max-line-length = 88
-select = C,E,F,W,B,B950
-extend-ignore = E203, E501
+select = B,C,E,F,W,T4,B9
+extend-ignore = E203,E266,E501,W503,F403,F401,E402
 
 [isort]
 profile=black
@@ -27,9 +27,9 @@ setenv =
 description = run linters
 skip_install = true
 deps =
-    black==22.12
+    black>=23.1
     flake8>=6.0
-    isort>=5.10
+    isort>=5.12
 commands =
     flake8 {posargs:connect6}
     black {posargs:.}
